--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'otusJavaHomeworks'
 include 'hw01-gradle'
 include 'hw04-generics'
 include 'hw06-annotations'
+include 'hw10-aop'
