--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,5 @@ include 'hw08-gc:homework'
 include 'hw10-aop'
 include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
+include 'hw21-jpql:class-demo'
+include 'hw21-jpql:homework-template'
