--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ include 'hw04-generics'
 include 'hw06-annotations'
 include 'hw08-gc:homework'
 include 'hw10-aop'
+include 'hw21-jpql:class-demo'
+include 'hw21-jpql:homework-template'
