--- a/hw22-cache/build.gradle
+++ b/hw22-cache/build.gradle
@@ -8,4 +8,7 @@ targetCompatibility = JavaVersion.VERSION_17
 dependencies {
     implementation("ch.qos.logback:logback-classic")
     implementation("org.ehcache:ehcache")
+    implementation("org.flywaydb:flyway-core")
+    implementation("com.zaxxer:HikariCP")
+    implementation("org.postgresql:postgresql")
 }
