--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,7 @@ include 'hw04-generics'
 include 'hw06-annotations'
 include 'hw08-gc:homework'
 include 'hw10-aop'
+include 'hw16-io:demo'
+include 'hw16-io:homework'
 include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
