--- a/hw24-webServer/build.gradle
+++ b/hw24-webServer/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-sourceCompatibility = JavaVersion.VERSION_13
-targetCompatibility = JavaVersion.VERSION_13
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 dependencies {
     implementation("ch.qos.logback:logback-classic")
@@ -17,6 +17,10 @@ dependencies {
     implementation("org.eclipse.jetty:jetty-io:${Versions.jetty}")
     implementation("org.eclipse.jetty:jetty-util:${Versions.jetty}")
     implementation("org.freemarker:freemarker:${Versions.freemarker}")
+
+    implementation("org.hibernate:hibernate-core")
+    implementation('org.flywaydb:flyway-core')
+    implementation("org.postgresql:postgresql")
 
     testImplementation("org.junit.jupiter:junit-jupiter-engine")
     testImplementation("org.junit.jupiter:junit-jupiter-params")
