--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'hw21-jpql:class-demo'
 include 'hw21-jpql:homework-template'
 include 'hw22-cache'
 include 'hw24-webServer'
+include 'hw25-di'
